--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 </div>
   <div class="donate-section">
-  <a href="https://www.actionagainsthunger.org/location/asia/philippines/" class="donate-btn" target="_blank">Donate Now</a>
+  <a href="https://hungerfreephilippines.org/">Donate Now</a>
 </div>
 
   
@@ -129,5 +129,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
