Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <div class="tophead">
   <div class="logo">HAPAG</div>
   <nav class="topnav">
-    <a href="#home">Home</a>
+    <a href="#top">Home</a>
     <a href="#why">Why</a>
-    <a href="#donate">Donate</a>
+    <a href: "https://hungerfreephilippines.org/" target="_blank">Donate</a>
     <a href="#involved">Get Involved</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -129,6 +129,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
