--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <nav class="topnav">
     <a href="#top">Home</a>
     <a href="#why">Why</a>
-    <a href: "https://hungerfreephilippines.org/" target="_blank">Donate</a>
-    <a href="#involved">Get Involved</a>
+    <a href= "https://hungerfreephilippines.org/" target="_blank">Donate</a>
+    <a href="https://hungerfreephilippines.org/" target="_blank">Get Involved</a>
     <a href="#contact">Contact</a>
   </nav>
 </div>
 
-  <div class = "bg2"></div>
+  <div id = "top" class = "bg2"></div>
     <div class = "slgn">
       <span style = "color: #fdd327">
       Fighting</span> 
@@ -74,7 +74,7 @@
 </div>
 
   
-  <div class="box2">
+  <div id = "why"class="box2">
   <div class="split">
     <div class="split-img"></div>
     <div class="split-text">
@@ -112,10 +112,11 @@
     </div>
     <p>© 2025 HAPAG Foundation — All Rights Reserved</p>
     <p>Fighting hunger through action and research.</p>
-    <div class="socials">
-      <a href="#">Facebook</a> |
-      <a href="#">Instagram</a> |
-      <a href="#">Email</a>
+    <p>Contact our founder:</p>
+    <div id = "contact" class="socials">
+      <a href="#">+63 9679529231</a> |
+      <a href="#">Miguel Abella on Facebook</a> |
+      <a href="#">uno2020miguel@gmail.com</a>
     </div>
   </div>
 </footer>
@@ -129,6 +130,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
